Completed : CRUD func

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 GOOGLE_ID = 31034656441-6lpiffdg2v4q1l2cqgsrvte0l80728nr.apps.googleusercontent.com
 GOOGLE_SECRET=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
+MONGO_URI = mongodb+srv://shivivj24:Shivani20@cluster0.aymqb70.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
